--- a/experiments/app_spectral_subtraction/.cproject
+++ b/experiments/app_spectral_subtraction/.cproject
@@ -230,6 +230,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming/src/sine_gen}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/xc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/pdf}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1911594639" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -587,6 +591,9 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming/src/sine_gen}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/pdf}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1905632432" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -950,6 +957,10 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming/src/sine_gen}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_beamforming/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/c++/v1&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2c/doc/pdf}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1428568131" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
