Added 16 bit output mode

--- a/tests/test_fir_model/Makefile
+++ b/tests/test_fir_model/Makefile
@@ -18,8 +18,10 @@ USED_MODULES = lib_logging lib_mic_array
 # xcc for the final link (mapping) stage.
 COMMON_FLAGS = -O2 -g -DDEBUG_PRINT_ENABLE=1
 
-XCC_FLAGS_COUNT4 = $(COMMON_FLAGS) -DCOUNT=4
-XCC_FLAGS_COUNT64 = $(COMMON_FLAGS) -DCOUNT=64
+XCC_FLAGS_COUNT4_LONG = $(COMMON_FLAGS) -DCOUNT=4 -DMIC_ARRAY_WORD_LENGTH_SHORT=0
+XCC_FLAGS_COUNT64_LONG = $(COMMON_FLAGS) -DCOUNT=64 -DMIC_ARRAY_WORD_LENGTH_SHORT=0
+XCC_FLAGS_COUNT4_SHORT = $(COMMON_FLAGS) -DCOUNT=4 -DMIC_ARRAY_WORD_LENGTH_SHORT=1
+XCC_FLAGS_COUNT64_SHORT = $(COMMON_FLAGS) -DCOUNT=64 -DMIC_ARRAY_WORD_LENGTH_SHORT=1
 
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
