Mega-commit for changes to move to 2.0.0 - mostly renaming

--- a/tests/test_channel_ordering/Makefile
+++ b/tests/test_channel_ordering/Makefile
@@ -18,8 +18,8 @@ USED_MODULES = lib_mic_array
 # xcc for the final link (mapping) stage.
 COMMON_FLAGS = -O2 -g
 
-XCC_FLAGS_FRONTEND_8BIT_4CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH
-XCC_FLAGS_FRONTEND_8BIT_8CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH
+XCC_FLAGS_FRONTEND_8BIT_4CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE
+XCC_FLAGS_FRONTEND_8BIT_8CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH -DTEST_MODE
 XCC_FLAGS_BACKEND = $(COMMON_FLAGS) -DBACKEND
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
