--- a/examples/AN00221_freq_domain_example/.cproject
+++ b/examples/AN00221_freq_domain_example/.cproject
@@ -198,6 +198,15 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/xc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/clang&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/rst}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1152121260" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -524,6 +533,13 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/clang&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/rst}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.113338703" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -855,6 +871,15 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/c++/v1"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/clang&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}/target/include/c++/v1&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_dsp/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_xassert/doc/rst}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_logging/doc/rst}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1295926015" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
