--- a/tests/test_output/Makefile
+++ b/tests/test_output/Makefile
@@ -1,7 +1,7 @@
 # The TARGET variable determines what target system the application is
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling
-TARGET = XCORE-200-EXPLORER
+TARGET = MIC-ARRAY-1V0
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
